tests/testFiles/semanticErrors/optionalparambeforerequiredparam.meme
you: a(b = 10, c)
me, an intellectual: {
}
